Revision history for Date-Event

{{$NEXT}}
    - Change the Windows test to use zef instead of the broken Windows
        version of prove6

0.0.3  2023-03-18T06:11:35-05:00
    - Add a Boolean attribute, '$is-calculated',  indicating 
      whether the event's date is caclulated or fixed
      (default: False). Add a method, 'is-calc', for the user 
      to change the value of that attribute.

0.0.2  2023-03-13T05:21:23-05:00
    - Add tags

0.0.1  2023-03-10T20:19:53-06:00
    - Initial version