@@ -3,6 +3,9 @@ Revision history for Date-Event
 {{$NEXT}}
     - Change the Windows test to use zef instead of the broken Windows
         version of prove6
+    - Add tests
+    - Rename method 'is-calc', make it require a Bool value
+      + test for a Bool entry, die on failure
 
 0.0.3  2023-03-18T06:11:35-05:00
     - Add a Boolean attribute, '$is-calculated',  indicating 
